Added changes to About and main page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
     </head>
     <body>
         {{>header}}
+        <p>This site was created by Phaninder. It uses Mapbox API</p>
         <img src="/img/Me.png">
         {{>footer}}
     </body>
